tests/my/bad/array001.lat
int main() {
  int[] x;
  int y = x * 10;
  return 0;
}
